update of the year because i'm now using firefox as my main browser:
- little refactoring to have a tiny bit of structure in the code (bgg
api file, background script file...)
- now using the standard browser extension API (bye bye chrome.*, hello
browser.*), making it work on Chrome with webextension-polyfill
- doing a little trick specific to Firefox when opening the BGG tab
because... it was buggy without it.
- adding svg source of the icon in the repo

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 		"128": "icon-square-128.png"
 	},
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["dist/see-on-bgg.js"]
 	},
 	"manifest_version": 2
 }
